php not utilised. Login works with flask python

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
 <body>
     <div></div>
     <div>
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit($event)" method="POST">
             <div>
                 <label>username:</label>
                 <input type="text" formControlName='username'>
