--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -13,6 +13,12 @@
                 </select>
             </div>
             <div *ngIf="dataset.length!==0">
+                <label for="datevar">Choose your Date variable</label>
+                <select name="datevar" id="datevar">
+                    <option *ngFor="let var of headers, let i =index" value={{headers[i]}}>{{headers[i]}}</option>
+                </select>
+            </div>
+            <div *ngIf="dataset.length!==0">
                 <label for="periodicity">Choose the periodicity for prediction:</label>
                 <select name="periodicity" id="periodicity">
                     <option *ngFor="let per of periodicity_options" value={{per}}>{{per}}</option>
@@ -23,7 +29,7 @@
                 <input type="text" name="range" id="range">
             </div>
             <div *ngIf="dataset.length!==0">
-                <button routerLink="/output" type="submit" value="submit">submit</button>
+                <button type="submit" value="submit">submit</button>
             </div>
         </form>
     </div>
