--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,36 +1,58 @@
-<title>Welcome</title>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css">
+</head>
 
 <body>
-    <h1>Welcome</h1><br>
-    <h2>Enter your dataset for forecasting</h2>
+    <div fxLayoutAlign="center" class="">
+    <mat-card class="welcome">
+    <div class="animate__animated animate__fadeIn animate__fast" id="header">
+        <h1 class="animate_animated animate_delay-1s">Welcome</h1>
+    </div>
+    <div class="animate__animated animate__fadeIn animate__fast" id="header">
+        <h2 class="animate_animated animate_delay-1s">Enter your Dataset for forecasting</h2>
+    </div>
+</mat-card>
+</div>
+<div fxLayoutAlign="center center" fxFlexFill class="pure-g toolbar animate__animated animate__fadeIn animate__delay-1s">
+    <mat-card class="mat_card">
+    <div class="pure-u-1 file">
     <input type="file" (change)="onFileChange($event)" multiple="false">
-    <div>
-        <form action="" (submit)="targetSubmit($event)">
+    </div>
+    <div class="pure-u-1">
+        <form action="" (submit)="targetSubmit($event)" class="pure-form pure-form-stacked pure-form-aligned">
+            
             <div *ngIf="dataset.length!==0">
-                <label for="targetvar">Choose your Target variable</label>
+                <label for="targetvar">Choose your Target variable:</label>
                 <select name="targetvar" id="targetvar">
                     <option *ngFor="let var of headers, let i =index" value={{headers[i]}}>{{headers[i]}}</option>
                 </select>
             </div>
-            <div *ngIf="dataset.length!==0">
-                <label for="datevar">Choose your Date variable</label>
+            
+            <div *ngIf="dataset.length!==0" >
+                <label for="datevar">Choose your Date variable:</label>
                 <select name="datevar" id="datevar">
                     <option *ngFor="let var of headers, let i =index" value={{headers[i]}}>{{headers[i]}}</option>
                 </select>
             </div>
-            <div *ngIf="dataset.length!==0">
+
+            <div *ngIf="dataset.length!==0" >
                 <label for="periodicity">Choose the periodicity for prediction:</label>
                 <select name="periodicity" id="periodicity">
                     <option *ngFor="let per of periodicity_options" value={{per}}>{{per}}</option>
                 </select>
             </div>
+            
             <div *ngIf="dataset.length!==0">
                 <label for="range">Choose the range for prediction:</label>
-                <input type="text" name="range" id="range">
+                <input type="number" name="range" id="range" placeholder="No.of Days/Weeks/Months...">
             </div>
+            
             <div *ngIf="dataset.length!==0">
-                <button type="submit" value="submit">submit</button>
+                <button type="submit" value="submit" class="pure-u-1-5 pure-button pure-button-admin">Submit</button>
             </div>
         </form>
     </div>
+</mat-card>
+</div>
 </body>
