--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,29 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css">
 </head>
 
-<body>
-    <div></div>
-    <div>
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" method="POST">
-            <div>
-                <label>username:</label>
-                <input type="text" formControlName='username'>
+<body class="animate_animated animate_fadeIn">
+    <div fxLayoutAlign="center center" fxFlexFill class="pure-g toolbar">
+        <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
+            <div class="pure-u-1 animate__animated animate__fadeIn animate__fast" id="header">
+                <h1 class="animate_animated animate_delay-1s">Login Page</h1>
             </div>
-            <div>
-                <label>password:</label>
-                <input type="password" formControlName="password">
-            </div>
-            <div *ngIf="loginForm.valid">
-                <button type="submit">Login</button>
-            </div>
-        </form>
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" method="POST"
+                class="pure-form pure-form-stacked pure-form-aligned" fxLayoutAlign="stretch" fxLayout="column">
+
+                <div >
+                    <label>Username:</label>
+                    <input type="text" formControlName='username' class="field pure-u-1">
+                </div>
+                <div class="">
+                    <label>Password:</label>
+                    <input type="password" formControlName="password" class="field pure-u-1">
+                </div>
+                <div *ngIf="loginForm.valid" class="animate__animated animate__fadeIn animate__faster">
+                    <button type="submit" class="pure-button pure-u-1 button-success">Login</button>
+                </div>
+            </form>
+        </mat-card>
     </div>
 </body>
