--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css">
     <title>Digiverz</title>
     <style>
-        #header{
+        #header {
             background-color: rgb(183, 40, 0);
             padding-bottom: 20px;
             padding-top: 20px;
@@ -11,15 +11,17 @@
     </style>
 </head>
 
-<body class="pure-g" >
+<body class="pure-g">
     <div class="pure-u-1 animate__animated animate__fadeIn animate__slower" id="header">
-        <h1 class="animate_animated animate_delay-1s" style='text-align:center;
+        <h1 class="animate_animated animate_delay-1s"
+            style='text-align:center;
             font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif; font-size:60px;font-weight: bold;'>
             Digiverz
         </h1>
     </div>
-    <div style=' margin-top:20px;margin-bottom: 20px;text-align:center;font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif; font-size:30px ;' class="pure-u-1 animate__animated animate__fadeIn animate animate__delay-1s" > 
-        <p > Welcome to the the sales forecasting application of Digiverz.</p>
+    <div style=' margin-top:20px;margin-bottom: 20px;text-align:center;font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif; font-size:30px ;'
+        class="pure-u-1 animate__animated animate__fadeIn animate animate__delay-1s">
+        <p> Welcome to the the sales forecasting application of Digiverz.</p>
         <p>Login to proceed</p>
     </div>
     <div style="text-align:center ;" class="pure-u-1 animate__animated animate__fadeIn animate animate__delay-1s">
@@ -29,14 +31,19 @@
                 border-radius: 4px;
                 text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
             }
-    
+
             .button-success {
                 background: rgb(183, 40, 0);
             }
+
             .button-large {
-            font-size: 110%;
-        }
+                font-size: 110%;
+            }
         </style>
-        <button routerLink="/login" class="button-large button-success pure-button animate__animated animate__pulse animate__infinite infinite">Log in</button>
+        <button routerLink="/login"
+            class="button-large button-success pure-button animate__animated animate__pulse animate__infinite infinite">Log
+            in</button><br><br>
+        <button routerLink="/register"
+            class="button-large button-success pure-button animate__animated animate__pulse animate__infinite infinite">Signup</button>
     </div>
 </body>
