--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
 
                 <div >
                     <label>Username:</label>
-                    <input type="text" formControlName='username' class="field pure-u-1">
+                    <input type="text" formControlName='email' class="field pure-u-1">
                 </div>
                 <div class="">
                     <label>Password:</label>
