--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -44,7 +44,10 @@
                 <div #container [ngStyle]="{width: 'auto'}" style="text-align:center;margin:0; padding:0;">
                     <mat-card class="mat_card_slider">
                         <label style="align-content: left;">Plots:</label> <br><br>
-                        <ng-image-slider [images]="img_slider" #nav slideImage="1">
+                        <ng-image-slider [images]="img_slider"  [infinite]="false"
+                        [autoSlide]="1"
+                        [imageSize]="{width: '100%', height: '30%'}"
+                        slideImage="1">
 
                         </ng-image-slider>
                     </mat-card>
