--- a/src/app/history/history.component.css
+++ b/src/app/history/history.component.css
@@ -1533,3 +1533,11 @@ p{
     }
   }
 
+  .button-success {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    background: rgb(183, 40, 0);
+    margin-top: 30px;
+    text-align: center;
+}
