--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 </head>
 
 <body class="animate_animated animate_fadeIn">
-    <div fxLayoutAlign="center center" fxFlexFill class="pure-g toolbar">
+    <div fxLayoutAlign="center center" fxFlexFill class="pure-g toolbar" *ngIf="!sessionExists; else sessionExisting">
         <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
             <div class="pure-u-1 animate__animated animate__fadeIn animate__fast" id="header">
                 <h1 class="animate_animated animate_delay-1s">Login</h1>
@@ -26,4 +26,18 @@
             </form>
         </mat-card>
     </div>
+    <ng-template #sessionExisting>
+        <div fxLayoutAlign="center center" fxFlexFill>
+        <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
+            <div style="text-align: center;">
+                <h2>
+                    You are already Logged In
+                </h2>
+            </div>
+            <div style="text-align: center;">
+                <button class="pure-button button-success" routerLink="/admin">Go to application</button>
+            </div>
+        </mat-card>
+    </div>
+    </ng-template>
 </body>
