--- a/src/app/output/output.component.css
+++ b/src/app/output/output.component.css
@@ -4,6 +4,15 @@
     margin-left: 10px;
 }
 
+.button-success {
+  color: white;
+  border-radius: 4px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  background: rgb(183, 40, 0);
+  margin-top: 30px;
+  text-align: center;
+}
+
 .mat_card_slider{
     background:rgba(71, 102, 132, 0.63);
     margin: 10px;
