--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -17,7 +17,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="!load_toggle">
+    <div *ngIf="(!load_toggle)&&(isSessionValid|async);else sessionExpired">
         <div class="pure-u-1-3">
             <mat-card class="mat_card" style="margin-top: 20px ;">
                 <div style="overflow:auto;width:100%;height:400px;">
@@ -111,5 +111,22 @@
             </mat-card>
         </div>
     </div>
+    <ng-template #sessionExpired>
+        <div fxLayoutAlign="center center" fxFlexFill>
+            <mat-card>
+                <div>
+                    <h1>
+                        Your Session has expired,
+                        Please Login again.
+                    </h1>
+                </div>
+                <div style="text-align: center;">
+                    <button class="pure-button button-success" routerLink="/login">Login</button>
+                </div>
+            </mat-card>
+        </div>
+    </ng-template>
 
 </body>
+
+<button (click)="openLogout($event)">Logout</button>
