--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<ng-container *ngIf="shouldShowSidebar();else otherPages">
+    <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+    <app-body
+        [collapsed]="isSideNavCollapsed"
+        [screenWidth]="screenWidth"
+    ></app-body>
+  </ng-container>
+  <ng-template #otherPages>
+    <router-outlet></router-outlet>
+</ng-template>
+  
