--- a/src/app/history/history.component.css
+++ b/src/app/history/history.component.css
@@ -1398,8 +1398,8 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 
   .mat_card{
     background:rgba(71, 102, 132, 0.63);
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top:  0px;
+    margin-left: 0px;
 }
 
 .mat_card_slider{
@@ -1428,9 +1428,22 @@ p{
     color: rgb(255, 50, 50);
 }
 
+.username{
+    color: rgb(255, 0, 0);
+    font-size: 18px;
+    margin-top: 7px;
+    margin-bottom: 0px;
+    padding-right: 10px;
+    margin-left: -15px;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .mat_card_table{
     background:rgba(71, 102, 132, 0.748);
-    margin: 10px;
+    margin: 5px;
     margin-left: -5px;
 }
 
