--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -6,38 +6,38 @@
 
 <body>
     <div *ngIf="isSessionValid|async; else sessionExpired">
-    <div fxLayoutAlign="center" class="">
-        <mat-card class="mat-card">
-            <div class="animate__animated animate__fadeIn animate__fast" id="">
-                <h1 class="animate_animated animate_delay-1s">History of Forecasts</h1>
-            </div>
-            <div class="animate__animated animate__fadeIn animate__fast" id="">
-                <h2 class="animate_animated animate_delay-1s">Choose the forecast you want to revisit</h2>
-            </div>
-        </mat-card>
-    </div>
-    <div fxLayoutAlign="center center"
-        class="animate__animated animate__fadeIn animate__delay-1s" style="margin-top: 30px;">
-        <mat-card class="mat_card">
-            <table class="pure-table pure-table-bordered" style="width: 100%;overflow-x: scroll;overflow-y: scroll;">
-                <tr class="pure-table-odd">
-                    <th>Date of Forecast</th>
-                    <th>Dataset Name</th>
-                    <th>Target for Forecast</th>
-                    <th>Forecasted Range</th>
-                    <th>View Results</th>
-                </tr>
-                <tr *ngFor="let record of tabledata">
-                    <td>{{record['date and time']}}</td>
-                    <td>{{record['filename']}}</td>
-                    <td>{{record['prediction_length']}}</td>
-                    <td>{{record['target']}}</td>
-                    <td><button (click)="viewRecord(record['date and time'])" class="pure-button pure-button-admin" style="text-align: center;width: fit-content;">View
-                            Results</button></td>
-                </tr>
-            </table>
-        </mat-card>
-    </div>
+        <div fxLayoutAlign="center">
+            <mat-card class="mat_card" style="margin-top:20px; margin-bottom: 10px;">
+                <div class="animate__animated animate__fadeIn animate__fast">
+                    <h1 class="animate_animated animate_delay-1s">History of Forecasts</h1>
+                </div>
+                <div class="animate__animated animate__fadeIn animate__fast">
+                    <h2 class="animate_animated animate_delay-1s">Choose the forecast you want to revisit</h2>
+                </div>
+            </mat-card>
+        </div>
+        <div fxLayoutAlign="center center" class="animate__animated animate__fadeIn animate__delay-1s">
+            <mat-card class="mat_card" style="height: 520px;overflow-y: scroll;">
+                <table class="pure-table pure-table-bordered">
+                    <tr class="pure-table-odd">
+                        <th>Date of Forecast</th>
+                        <th>Dataset Name</th>
+                        <th>Target for Forecast</th>
+                        <th>Forecasted Range</th>
+                        <th>View Results</th>
+                    </tr>
+                    <tr *ngFor="let record of tabledata">
+                        <td>{{record['date and time']}}</td>
+                        <td>{{record['filename']}}</td>
+                        <td>{{record['prediction_length']}}</td>
+                        <td>{{record['target']}}</td>
+                        <td><button (click)="viewRecord(record['date and time'])" class="pure-button pure-button-admin"
+                                style="text-align: center;width: fit-content;">View
+                                Results</button></td>
+                    </tr>
+                </table>
+            </mat-card>
+        </div>
     </div>
     <ng-template #sessionExpired>
         <div fxLayoutAlign="center center" fxFlexFill>
@@ -55,4 +55,7 @@
         </div>
     </ng-template>
 </body>
-<button (click)="openLogout($event)">Logout</button>
+
+<!-- <div class="pure-u-1-2" style="width: fit-content;">
+    <p class="username">{{username}}</p>
+</div> -->
