--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -17,98 +17,101 @@
             </div>
         </div>
     </div>
-    <div *ngIf="(!load_toggle)&&(isSessionValid|async);else sessionExpired">
-        <div class="pure-u-1-3">
-            <mat-card class="mat_card" style="margin-top: 20px ;">
-                <div style="overflow:auto;width:100%;height:400px;">
-                    <label >Predictions:</label>
-                    <mat-card class="mat_card_table" >
-                        <table class="pure-table pure-table-bordered" style="width: 100%;overflow-x: scroll;overflow-y: scroll;">
-                            <!-- <tr><th>test</th></tr>
+    <div *ngIf="(isSessionValid|async);else sessionExpired">
+        <div *ngIf="(!load_toggle)">
+            <div class="pure-u-1-3">
+                <mat-card class="mat_card" style="margin-top: 20px ;">
+                    <div style="overflow:auto;width:100%;height:400px;">
+                        <label>Predictions:</label>
+                        <mat-card class="mat_card_table">
+                            <table class="pure-table pure-table-bordered"
+                                style="width: 100%;overflow-x: scroll;overflow-y: scroll;">
+                                <!-- <tr><th>test</th></tr>
                             <tr><td>test2</td><td>test2</td><td>test2</td></tr> -->
-                            <tr class="pure-table-odd">
-                                <th *ngFor="let head of pred_keys">{{head}}</th>
-                            </tr>
-                            <td *ngFor="let val of pred_array,let i = index">
-                                <tr *ngFor="let cell of val">{{cell}}</tr>
-                            </td>
-                        </table>
+                                <tr class="pure-table-odd">
+                                    <th *ngFor="let head of pred_keys">{{head}}</th>
+                                </tr>
+                                <td *ngFor="let val of pred_array,let i = index">
+                                    <tr *ngFor="let cell of val">{{cell}}</tr>
+                                </td>
+                            </table>
+                        </mat-card>
+                    </div>
+                </mat-card>
+            </div>
+
+            <div class="pure-u-2-3">
+                <div class="pure-u-1">
+                    <div style="margin-top:20px;margin-left:30px;"></div>
+                    <div #container [ngStyle]="{width: 'auto'}" style="text-align:center;margin:0; padding:0;">
+                        <mat-card class="mat_card_slider">
+                            <label style="align-content: left;">Plots:</label> <br><br>
+                            <ng-image-slider [images]="img_slider" [infinite]="false" [autoSlide]="1"
+                                [imageSize]="{width: '100%', height: '30%'}" slideImage="1">
+
+                            </ng-image-slider>
+                        </mat-card>
+                    </div>
+                </div>
+                <div class="pure-u-1-2">
+                    <mat-card class="mat_card">
+                        <label>Best Model: </label>
+                        <p class="result">{{best_model_name}}</p>
+                        <p> is the model that provided the best fit for your data.</p>
                     </mat-card>
                 </div>
-            </mat-card>
-        </div>
-
-        <div class="pure-u-2-3">
-            <div class="pure-u-1">
-                <div style="margin-top:20px;margin-left:30px;"></div>
-                <div #container [ngStyle]="{width: 'auto'}" style="text-align:center;margin:0; padding:0;">
-                    <mat-card class="mat_card_slider">
-                        <label style="align-content: left;">Plots:</label> <br><br>
-                        <ng-image-slider [images]="img_slider"  [infinite]="false"
-                        [autoSlide]="1"
-                        [imageSize]="{width: '100%', height: '30%'}"
-                        slideImage="1">
-
-                        </ng-image-slider>
+                <div class="pure-u-1-2">
+                    <mat-card class="mat_card" style="margin-right: 10px;">
+                        <label>Best Parameters:</label>
+                        <p class="result">{{best_params}}</p>
+                        <p> are the optimal parameters of the model for best fit.</p>
                     </mat-card>
                 </div>
             </div>
-            <div class="pure-u-1-2">
+
+            <div class="pure-u-1-3">
                 <mat-card class="mat_card">
-                    <label>Best Model: </label>
-                    <p class="result">{{best_model_name}}</p>
-                    <p> is the model that provided the best fit for your data.</p>
+                    <div style="white-space:pre-wrap">
+                        <label>Training Error rate:</label>
+                        <p class="result">{{error_rate}}</p>
+                        <p> is the error rate observed by the model during Training</p>
+                    </div>
+                    <div>
+                        <label>Back forecast error rate:</label>
+                        <p class="result">RMSE: {{back_f_rmse}}</p>
+                        <p> is the error rate of back forecasting on the training data.</p>
+                    </div>
                 </mat-card>
             </div>
-            <div class="pure-u-1-2">
+
+            <div class="pure-u-1-3">
+                <mat-card class="mat_card" style="  height: auto;overflow: auto;">
+                    <div style="white-space:pre-wrap;">
+                        <label>Best Transformation Parameters:</label><br>
+                        <p class="result">{{best_trans}}</p>
+                    </div>
+                </mat-card>
+            </div>
+
+
+            <div class="pure-u-1-3">
                 <mat-card class="mat_card" style="margin-right: 10px;">
-                    <label>Best Parameters:</label>
-                    <p class="result">{{best_params}}</p>
-                    <p> are the optimal parameters of the model for best fit.</p>
+                    <div>
+                        <label>Download the EDA performed on your Data:</label><br>
+                        <button (click)="viewEDA()" class="pure-button" style="margin-top: 7px;">Download EDA</button>
+                    </div><br>
+                    <div>
+                        <label>Download the predicitions as a CSV file:</label><br>
+                        <button (click)="predSave()" class="pure-button" style="margin-top: 7px;">Save
+                            Predictions</button>
+                    </div><br>
+                    <div>
+                        <label>Download the original data & Predictions as a CSV file:</label>
+                        <button (click)="fullSave()" class="pure-button" style="margin-top: 7px;">Save Original &
+                            Predictions</button>
+                    </div>
                 </mat-card>
             </div>
-        </div>
-
-        <div class="pure-u-1-3">
-            <mat-card class="mat_card">
-                <div style="white-space:pre-wrap">
-                    <label>Training Error rate:</label>
-                    <p class="result">{{error_rate}}</p>
-                    <p> is the error rate observed by the model during Training</p>
-                </div>
-                <div>
-                    <label>Back forecast error rate:</label>
-                    <p class="result">RMSE: {{back_f_rmse}}</p>
-                    <p> is the error rate of back forecasting on the training data.</p>
-                </div>
-            </mat-card>
-        </div>
-
-        <div class="pure-u-1-3">
-            <mat-card class="mat_card" style="  height: auto;overflow: auto;">
-                <div style="white-space:pre-wrap;">
-                    <label>Best Transformation Parameters:</label><br>
-                    <p class="result">{{best_trans}}</p>
-                </div>
-            </mat-card>
-        </div>
-
-
-        <div class="pure-u-1-3">
-            <mat-card class="mat_card" style="margin-right: 10px;">
-                <div>
-                    <label>Download the EDA performed on your Data:</label><br>
-                    <button (click)="viewEDA()" class="pure-button" style="margin-top: 7px;">Download EDA</button>
-                </div><br>
-                <div>
-                    <label>Download the predicitions as a CSV file:</label><br>
-                    <button (click)="predSave()" class="pure-button" style="margin-top: 7px;">Save Predictions</button>
-                </div><br>
-                <div>
-                    <label>Download the original data & Predictions as a CSV file:</label>
-                    <button (click)="fullSave()" class="pure-button" style="margin-top: 7px;">Save Original & Predictions</button>
-                </div>
-            </mat-card>
         </div>
     </div>
     <ng-template #sessionExpired>
@@ -128,5 +131,3 @@
     </ng-template>
 
 </body>
-
-<button (click)="openLogout($event)">Logout</button>
