--- a/src/app/output/output.component.html
+++ b/src/app/output/output.component.html
@@ -98,16 +98,16 @@
                 <mat-card class="mat_card" style="margin-right: 10px;">
                     <div>
                         <label>Download the EDA performed on your Data:</label><br>
-                        <button (click)="viewEDA()" class="pure-button" style="margin-top: 7px;">Download EDA</button>
+                        <button (click)="viewEDA()" class="pure-button pure-button-admin" style="margin-top: 7px;">Download EDA</button>
                     </div><br>
                     <div>
                         <label>Download the predicitions as a CSV file:</label><br>
-                        <button (click)="predSave()" class="pure-button" style="margin-top: 7px;">Save
+                        <button (click)="predSave()" class="pure-button pure-button-admin" style="margin-top: 7px;">Save
                             Predictions</button>
                     </div><br>
                     <div>
                         <label>Download the original data & Predictions as a CSV file:</label>
-                        <button (click)="fullSave()" class="pure-button" style="margin-top: 7px;">Save Original &
+                        <button (click)="fullSave()" class="pure-button pure-button-admin" style="margin-top: 7px;">Save Original &
                             Predictions</button>
                     </div>
                 </mat-card>
