--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" method="POST"
                 class="pure-form pure-form-stacked pure-form-aligned" fxLayoutAlign="stretch" fxLayout="column">
 
-                <div >
+                <div>
                     <label>Email:</label>
                     <input type="text" formControlName='email' class="field pure-u-1">
                 </div>
@@ -21,23 +21,24 @@
                     <input type="password" formControlName="password" class="field pure-u-1">
                 </div>
                 <div class="animate__animated animate__fadeIn animate__faster">
-                    <button type="submit" [disabled]="loginForm.invalid" class="pure-button pure-u-1 button-success">Login</button>
+                    <button type="submit" [disabled]="loginForm.invalid"
+                        class="pure-button pure-u-1 button-success">Login</button>
                 </div>
             </form>
         </mat-card>
     </div>
     <ng-template #sessionExisting>
         <div fxLayoutAlign="center center" fxFlexFill>
-        <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
-            <div style="text-align: center;">
-                <h2>
-                    You are already Logged In
-                </h2>
-            </div>
-            <div style="text-align: center;">
-                <button class="pure-button button-success" routerLink="/admin">Go to application</button>
-            </div>
-        </mat-card>
-    </div>
+            <mat-card class="pure-u-1-3 mat_card" fxFlex="25">
+                <div style="text-align: center;">
+                    <h2>
+                        You are already Logged In
+                    </h2>
+                </div>
+                <div style="text-align: center;">
+                    <button class="pure-button button-success" routerLink="/admin">Go to application</button>
+                </div>
+            </mat-card>
+        </div>
     </ng-template>
 </body>
