final commit before trying reverse proxy and containerization

--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -17,7 +17,7 @@
             </mat-card>
         </div>
         <div fxLayoutAlign="center center" class="animate__animated animate__fadeIn animate__delay-1s">
-            <mat-card class="mat_card" style="height: auto;overflow-y: scroll;">
+            <mat-card class="mat_card" style="height: 500px;overflow-y: scroll;">
                 <table class="pure-table pure-table-bordered">
                     <tr class="pure-table-odd">
                         <th>Date of Forecast</th>
